--- a/package.json
+++ b/package.json
@@ -18,22 +18,14 @@
   "homepage": "https://github.com/loic-prosi/storybook#readme",
   "dependencies": {
     "@babel/core": "^7.11.1",
-    "@storybook/addon-a11y": "^5.3.19",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-backgrounds": "^5.3.19",
-    "@storybook/addon-centered": "^5.3.19",
-    "@storybook/addon-events": "^5.3.19",
-    "@storybook/addon-info": "^5.3.19",
-    "@storybook/addon-jest": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addon-notes": "^5.3.19",
-    "@storybook/addon-options": "^5.3.19",
-    "@storybook/addon-storysource": "^5.3.19",
-    "@storybook/addon-viewport": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-actions": "^6.0.1",
+    "@storybook/addon-essentials": "^6.0.1",
+    "@storybook/addon-links": "^6.0.1",
+    "@storybook/node-logger": "^6.0.1",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.1",
     "babel-loader": "^8.1.0",
+    "react-is": "^16.13.1",
     "css-loader": "^4.2.1",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
